WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135461
Fix uninitialized scalar variable
https://bugs.webkit.org/show_bug.cgi?id=135461
Summary
Fix uninitialized scalar variable
przemeks@pkuczynski.com
Reported
2014-07-31 06:10:45 PDT
If fopen fails, returned ApplicationMemoryStats structure will be uninitialized
Attachments
porposed patch
(1.40 KB, patch)
2014-07-31 06:12 PDT
,
przemeks@pkuczynski.com
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
przemeks@pkuczynski.com
Comment 1
2014-07-31 06:12:46 PDT
Created
attachment 235824
[details]
porposed patch
WebKit Commit Bot
Comment 2
2014-07-31 10:41:12 PDT
Comment on
attachment 235824
[details]
porposed patch Clearing flags on attachment: 235824 Committed
r171868
: <
http://trac.webkit.org/changeset/171868
>
WebKit Commit Bot
Comment 3
2014-07-31 10:41:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug