Fix uninitialized scalar variable https://bugs.webkit.org/show_bug.cgi?id=135461

Patch by Przemyslaw Kuczynski <p.kuczynski@samsung.com> on 2014-07-31
Reviewed by Alexey Proskuryakov.

If fopen fails, returned ApplicationMemoryStats structure will be uninitialized

* Shared/linux/WebMemorySamplerLinux.cpp:
(WebKit::sampleMemoryAllocatedForApplication): Initialized applicationStats.

Canonical link: https://commits.webkit.org/153344@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171868 268f45cc-cd09-0410-ab3c-d52691b4dbfc